--- a/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.tex
+++ b/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.tex
@@ -190,7 +190,7 @@ Intervention, Volunteering},
 evidence from a national longitudinal study}
 \author{Joseph A. Bulbulia \and Don E Davis \and Ken Rice \and Chris G.
 Sibley \and Geoffrey Troughton}
-\date{2024-04-05}
+\date{2024-04-06}
 
 \begin{document}
 \maketitle
@@ -815,6 +815,15 @@ standard deviation units.}
 
 \end{figure}%
 
+\begin{verbatim}
+          outcome E[Y(1)]-E[Y(0)]  2.5 % 97.5 % E_Value E_Val_bound
+1       donations           0.173  0.097  0.250   1.617       1.409
+2 hours volunteer           0.091 -0.042  0.223   1.393       1.000
+      Estimate                        estimate_lab
+1     positive 0.173 (0.097-0.25) [EV 1.617/1.409]
+2 not reliable   0.091 (-0.042-0.223) [EV 1.393/1]
+\end{verbatim}
+
 \begin{longtable}[]{@{}lrrrrr@{}}
 
 \caption{\label{tbl-1_1}This table reports the results of model
@@ -837,23 +846,26 @@ hours volunteer & 0.09 & -0.04 & 0.22 & 1.39 & 1.00 \\
 
 \end{longtable}
 
-This longitudinal modified treatment policy computes the target
-population's expected outcome difference between treatment and contrast
-groups.
+The Longitudinal Modified Treatment Policy (LMTP) calculates the
+expected outcome difference between treatment and contrast groups for a
+specified population, focusing on longitudinal data.
 
-The estimate for the outcome `donations' is 0.173 {[}0.097,0.25{]}. The
-E-value for this effect estimate is 1.617, with a lower bound of 1.409.
-In this scenario, assuming all modelled covariates, an unmeasured
-confounder that exhibits an association with both the treatment and
-outcome with a minimum strength (on the risk ratio scale) of 1.409 could
-nullify the observed effect. However, the effect would survive weaker
-unmeasured confounding. Here, we find \textbf{evidence for causality}.
+For `donations', the effect estimate is 0.173 {[}0.097, 0.25{]}. The
+E-value for this estimate is 1.617 with a lower bound of 1.409. Given
+all modelled covariates, an unmeasured confounder would need a minimum
+association strength with both the treatment and outcome of 1.409 to
+nullify the observed effect. Weaker associations would not overturn it.
+We infer \textbf{Evidence for causality}.
 
 On the data scale, this intervention represents a difference of NZD
 827.77 per adult per year in charitable giving.
 
-For the outcome `hours volunteer', given the lower bound of the E-value
-equals 1; we infer that \textbf{evidence for causality is not reliable.}
+For `hours volunteer', the effect estimate is 0.091 {[}-0.042, 0.223{]}.
+The E-value for this estimate is 1.393 with a lower bound of 1. Given
+all modelled covariates, an unmeasured confounder would need a minimum
+association strength with both the treatment and outcome of 1 to nullify
+the observed effect. Weaker associations would not overturn it. We infer
+\textbf{Evidence for causality is not reliable}.
 
 \newpage{}
 
@@ -892,24 +904,31 @@ E\_Val\_bound \\
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-donations & 0.10 & 0.02 & 0.17 & 1.41 & 1.15 \\
-hours volunteer & 0.07 & -0.06 & 0.20 & 1.33 & 1.00 \\
+donations & 0.13 & 0.06 & 0.2 & 1.50 & 1.29 \\
+hours volunteer & 0.07 & -0.06 & 0.2 & 1.33 & 1.00 \\
 
 \end{longtable}
 
-The estimate for the outcome `donations' is 0.096 {[}0.02,0.171{]}. The
-E-value for this effect estimate is 1.407, with a lower bound of 1.154.
-In this scenario, assuming all modelled covariates, an unmeasured
-confounder that exhibits an association with both the treatment and
-outcome with a minimum strength (on the risk ratio scale) of 1.154 could
-nullify the observed effect. However, the effect would survive weaker
-unmeasured confounding. Here, we find \textbf{evidence for causality}.
+The Longitudinal Modified Treatment Policy (LMTP) calculates the
+expected outcome difference between treatment and contrast groups for a
+specified population, focusing on longitudinal data.
+
+For `donations', the effect estimate is 0.131 {[}0.058, 0.205{]}. The
+E-value for this estimate is 1.504 with a lower bound of 1.295. Given
+all modelled covariates, an unmeasured confounder would need a minimum
+association strength with both the treatment and outcome of 1.295 to
+nullify the observed effect. Weaker associations would not overturn it.
+We infer \textbf{Evidence for causality}.
 
 On the data scale, this intervention represents a difference of NZD
-459.34 per adult per year in charitable giving.
+626.81 per adult per year in charitable giving.
 
-For the outcome `hours volunteer', given the lower bound of the E-value
-equals 1; we infer that \textbf{evidence for causality is not reliable.}
+For `hours volunteer', the effect estimate is 0.069 {[}-0.06, 0.199{]}.
+The E-value for this estimate is 1.327 with a lower bound of 1. Given
+all modelled covariates, an unmeasured confounder would need a minimum
+association strength with both the treatment and outcome of 1 to nullify
+the observed effect. Weaker associations would not overturn it. We infer
+\textbf{Evidence for causality is not reliable}.
 
 \newpage{}
 
@@ -960,33 +979,34 @@ E\_Val\_bound
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-donations & -0.077 & -0.099 & -0.056 & 1.352 & 1.285 \\
+donations & -0.042 & -0.056 & -0.028 & 1.240 & 1.190 \\
 hours volunteer & -0.022 & -0.033 & -0.010 & 1.164 & 1.107 \\
 
 \end{longtable}
 
-The estimate for the outcome `hours volunteer' is -0.022
-{[}-0.033,-0.01{]}. The E-value for this effect estimate is 1.164 with a
-lower bound of 1.107. In this scenario, assuming all modelled
-covariates, an unmeasured confounder that exhibits an association with
-both the treatment and outcome with a minimum strength (on the risk
-ratio scale) of 1.107 could nullify the observed effect. However, the
-effect would survive weaker unmeasured confounding. Here, we find
-\textbf{weak evidence for causality}.
+The Longitudinal Modified Treatment Policy (LMTP) calculates the
+expected outcome difference between treatment and contrast groups for a
+specified population, focusing on longitudinal data.
 
-On the data scale, this intervention represents a difference of -5.4
-volunteer minutes.
+For `hours volunteer', the effect estimate is -0.022 {[}-0.033,
+-0.01{]}. The E-value for this estimate is 1.164 with a lower bound of
+1.107. Given all modelled covariates, an unmeasured confounder would
+need a minimum association strength with both the treatment and outcome
+of 1.107 to nullify the observed effect. Weaker associations would not
+overturn it. We infer \textbf{weak evidence for causality}.
 
-The estimate for the outcome `donations' is -0.077 {[}-0.099,-0.056{]}.
-The E-value for this effect estimate is 1.352 with a lower bound of
-1.285. In this scenario, assuming all modelled covariates, an unmeasured
-confounder that exhibits an association with both the treatment and
-outcome with a minimum strength (on the risk ratio scale) of 1.285 could
-nullify the observed effect. However, the effect would survive weaker
-unmeasured confounding. Here, we find \textbf{evidence for causality}.
+On the data scale, this intervention represents a difference of -5.38 in
+volunteering minutes.
+
+For `donations', the effect estimate is -0.042 {[}-0.056, -0.028{]}. The
+E-value for this estimate is 1.24 with a lower bound of 1.19. Given all
+modelled covariates, an unmeasured confounder would need a minimum
+association strength with both the treatment and outcome of 1.19 to
+nullify the observed effect. Weaker associations would not overturn it.
+We infer \textbf{evidence for causality}.
 
 On the data scale, this intervention represents a difference of NZD
--368.43 per adult per year in charitable giving.
+-200.96 per adult per year in charitable giving.
 
 \newpage{}
 
@@ -1115,7 +1135,7 @@ E\_Val\_bound
 \endlastfoot
 neighbourhood community & 0.013 & -0.136 & 0.163 & 1.122 & 1.000 \\
 social belonging & 0.108 & 0.019 & 0.197 & 1.441 & 1.155 \\
-social suport & 0.039 & -0.075 & 0.153 & 1.230 & 1.000 \\
+social support & 0.039 & -0.075 & 0.153 & 1.230 & 1.000 \\
 
 \end{longtable}
 
@@ -1186,7 +1206,7 @@ E\_Val\_bound
 \endlastfoot
 neighbourhood community & -0.016 & -0.023 & -0.009 & 1.137 & 1.094 \\
 social belonging & -0.013 & -0.019 & -0.006 & 1.122 & 1.087 \\
-social suport & -0.011 & -0.018 & -0.004 & 1.111 & 1.073 \\
+social support & -0.011 & -0.018 & -0.004 & 1.111 & 1.073 \\
 
 \end{longtable}
 
@@ -1273,7 +1293,7 @@ E\_Val\_bound
 \bottomrule\noalign{}
 \endlastfoot
 family gives time & 1.17 & 1.00 & 1.37 & 1.61 & 1.00 \\
-friends gives time & 1.24 & 0.98 & 1.55 & 1.77 & 1.00 \\
+friends give time & 1.24 & 0.98 & 1.55 & 1.77 & 1.00 \\
 community gives time & 1.44 & 1.05 & 1.98 & 2.23 & 1.26 \\
 
 \end{longtable}
@@ -1502,7 +1522,7 @@ E\_Val\_bound
 \bottomrule\noalign{}
 \endlastfoot
 family gives money & 1.66 & 1.22 & 2.25 & 2.70 & 1.74 \\
-friends gives money & 2.05 & 1.32 & 3.18 & 3.52 & 1.98 \\
+friends give money & 2.05 & 1.32 & 3.18 & 3.52 & 1.98 \\
 community gives money & 2.66 & 1.93 & 3.67 & 4.77 & 3.27 \\
 
 \end{longtable}
@@ -1586,7 +1606,7 @@ E\_Val\_bound
 \bottomrule\noalign{}
 \endlastfoot
 family gives money & 1.47 & 1.09 & 1.98 & 2.30 & 1.39 \\
-friends gives money & 1.72 & 1.13 & 2.62 & 2.83 & 1.51 \\
+friends give money & 1.72 & 1.13 & 2.62 & 2.83 & 1.51 \\
 community gives money & 2.04 & 1.59 & 2.62 & 3.50 & 2.56 \\
 
 \end{longtable}
@@ -1750,30 +1770,34 @@ We may use results to compute the economic or ``cash value'' of
 religious service attendance as follows:
 
 An increase in religious service attendance results in an enhanced per
-capita donation rate as 1509.5361614, whereas the expected status-quo
-rate is 1050.1962439. Conversely, a decrease in religious service
-attendance would lead to a charitable donation rate of 681.7673517
-compared with 1050.1962439
-
-Our results indicate that the hypothetical benefit from country-wide
+capita donation rate as 1553.3262405, whereas the expected status-quo
+rate is 925.6217757. Conversely, a decrease in religious service
+attendance would lead to a charitable donation rate of 725.145593
+compared with 925.6217757. The New Zealand Adult population in 2021 was
+\ensuremath{3.989\times 10^{6}}.\footnote{\url{https://www.stats.govt.nz/information-releases/national-population-estimates-at-30-june-2021}}
+Summing results indicate that the hypothetical benefit from country-wide
 adoption of regular religious service on charitable donations is:
-\ensuremath{1.8323069\times 10^{9}}, whereas, the hypothetical cost from
+\ensuremath{2.5039131\times 10^{9}}, whereas, the hypothetical cost from
 a country-wide loss of regular religious service on charitable donations
-is: \ensuremath{-1.4696629\times 10^{9}}. Putting these figures in
-context, the expected gain from the country-wide adoption of religious
-service is 0.0316046 of New Zealand's annual government budget in 2021
-The expected loss from the country-wide loss of all religious service
-amounts to 0.0253495 of New Zealand's annual government budget in 2021.
+is: \ensuremath{-7.9969949\times 10^{8}}.
 
-We infer that diminising New Zealand's religious service attendance has
-economic consequences.
+Putting these figures in context, the government of New Zealand's annual
+budget in 2021 was \ensuremath{5.7976\times 10^{10}}.\footnote{\url{https://www.treasury.govt.nz/publications/budgets/budget-2021}}.
+The expected gain from the country-wide adoption of religious service is
+0.0431888 of New Zealand's annual government budget in 2021 The expected
+loss from the country-wide loss of all religious service amounts to
+0.0137936 of New Zealand's annual government budget in 2021.
 
-\subsubsection{Concerns about the results reported in standard
-cross-sectional regression
-models}\label{concerns-about-the-results-reported-in-standard-cross-sectional-regression-models}
+We infer that the declining religious service in New Zealand affects
+charitable giving, however these costs sum to about 0.32 the opportunity
+costs of world in which the population attended religious service
+regularly.
 
-How do these results compare with an ordinary cross-sectional regression
-with the same covariates (minus baseline treatment and outcome)?
+\subsubsection{Note of concern about the use of cross-sectional
+regression models to investigate the social consequences of
+religion}\label{note-of-concern-about-the-use-of-cross-sectional-regression-models-to-investigate-the-social-consequences-of-religion}
+
+How do these results compare with a cross-sectional regression?
 
 For example, the regression coefficient for a one-unit increase in
 religious service attendance is b = 580; (95\% CI 535, 626). A four-unit
