--- a/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal effects of religious service attendance on prosociality evidence from a national longitudinal study"
 abstract: |
-   Whether religion causes prosociality is a poorly defined question. To make it precise, we must state a causal contrast of interest, specify our measures of "prosociality," and clarify the target population for whom results are meant to generalise. Here, we investigate three hypothetical interventions on religious service attendance and examine their effects on four prosociality measurement domains for the population of New Zealand. Each treatment policy addresses a causal question motivated by a distinct theoretical or practical interest. Study 1 investigates the effects of the three interventions on self-reported social behaviours; Study 2 investigates effects on perceived social connection; Study 3 investigates effects on reported hours of help received from others; Study 4 investigates the effects of reported money received from others. Overall, we find evidence that religion supports pro-social behaviours across all four measurement domains of prosociality. However, the magnitude of benefit varies depending on the causal contrastof interest -- and especially whether religious service is gained or lost. Magnitudes of benefit are almost three-times lower than is suggested by cross-sectional regression models. Nevertheless, both the gain and loss of regular religious service attendance have considerable economic consequences for charitable donations, whose "cash value" we compute. Collectively, these finding document the social consequences of religious behaviours and illustrate a pathway for quantitative causal investigations of the effects of cultural practices. 
+   Whether religion causes prosociality is a poorly defined question. To make it precise, we must state a causal contrast of interest, specify our measures of "prosociality," and clarify the target population for whom results are meant to generalise. Here, we investigate three hypothetical interventions on religious service attendance and examine their effects on four prosociality measurement domains for the population of New Zealand. Each treatment policy addresses a causal question motivated by a distinct theoretical or practical interest. Study 1 investigates the effects of the three interventions on self-reported social behaviours; Study 2 investigates effects on perceived social connection; Study 3 investigates effects on reported hours of help received from others; Study 4 investigates the effects of reported money received from others. Overall, we find evidence that religion supports pro-social behaviours across all four measurement domains of prosociality. However, the magnitude of benefit varies depending on the causal contrast of interest -- and especially whether religious service is gained or lost. Magnitudes of benefit are almost three-times lower than is suggested by cross-sectional regression models. Nevertheless, both the gain and loss of regular religious service attendance have considerable economic consequences for charitable donations, whose "cash value" we compute. Collectively, these findings document the social consequences of religious behaviours and illustrate a pathway for quantitative causal investigations of the effects of cultural practices. 
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
@@ -31,12 +31,12 @@ editor_options:
   chunk_output_type: console
 format:
   pdf:
-    sanitize: true
+    sanitise: true
     keep-tex: true
     link-citations: true
     colorlinks: true
     documentclass: article
-    classoption: [singlecolumn]
+    classoption: [single column]
     lof: false
     lot: false
     geometry:
@@ -76,7 +76,7 @@ push_mods <-  fs::path_expand(
 )
 
 
-#tinytex::tlmgr_update()
+#tinytext::tlmgr_update()
 
 # WARNING:  COMMENT THIS OUT. JB DOES THIS FOR WORKING WITHOUT WIFI
 #source("/Users/joseph/GIT/templates/functions/libs2.R")
@@ -85,8 +85,6 @@ library(margot)
 library(ggplot2)
 library(tidyverse)
 library(gtsummary)
-library(lmtp)
-library(WeightIt)
 # # WARNING:  COMMENT THIS OUT. JB DOES THIS FOR WORKING WITHOUT WIFI
 # source("/Users/joseph/GIT/templates/functions/funs.R")
 
@@ -672,7 +670,7 @@ A central question in the scientific study of religion is whether religion cause
 
 Conceptually, the question of" "whether religion causes prosociality" is poorly defined. To make this question precise, we must state the causal contrasts of interest, the specific measures of "prosociality" of interest, and the target population for whom results are meant to generalise. 
 
-Here, we leverage comprehensive panel data from `r n_participants` who participated in the New Zealand Attitudes and Values Study from 2018-2021 and investigate the effects of well-defined population-level shifts in religious attendance across four measurement domains of pro-sociality. The target quantities for each of the four domains are longitudinal modified shift policies. The first treatment policy addresses the theoretical question: "What would the population-wide difference be on a well-defined measure  of pro-sociality if everyone attended weekly religious service compared with if no one attended?" This question holds theoretical interest. The second treatment policy addresses the practical question: "What would the population-wide difference on a well-defined measure domain of pro-sociality if everyone attended weekly religious service compared to the status quo?"  Here, the contrast does not require shifting those people who regularly attend religious services. The question reflects policy interests in supporting the *gain* of religious attendance. The third treatment policy addresses the practical question: "What would be the population-wide difference on a well-defined measure domain of pro-sociality if everyone stopped attending weekly religious service compared to the status quo." Here, the contrast does not require shifting those who never attend religious services; it reflects policy interests in supporting the *loss* of religious attendance (or in the New Zealand setting, where loss exceeds gain, of failing to inhibit the loss of regular religious service). 
+Here, we leverage comprehensive panel data from `r n_participants` who participated in the New Zealand Attitudes and Values Study from 2018-2021 and investigate the effects of well-defined population-level shifts in religious attendance across four measurement domains of pro-sociality. The target quantities for each of the four domains are longitudinal modified shift policies. The first treatment policy addresses the theoretical question: "What would the population-wide difference be on a well-defined measure  of pro-sociality if everyone attended weekly religious service compared with if no one attended?" This question holds theoretical interest. The second treatment policy addresses the practical question: "What would be the population-wide difference on a well-defined measure domain of pro-sociality if everyone attended weekly religious service compared to the status quo?"  Here, the contrast does not require shifting those people who regularly attend religious services. The question reflects policy interests in supporting the *gain* of religious attendance. The third treatment policy addresses the practical question: "What would be the population-wide difference on a well-defined measure domain of pro-sociality if everyone stopped attending weekly religious service compared to the status quo." Here, the contrast does not require shifting those who never attend religious services; it reflects policy interests in supporting the *loss* of religious attendance (or in the New Zealand setting, where loss exceeds gain, of failing to inhibit the loss of regular religious service). 
 
 
 ## Method
@@ -732,7 +730,7 @@ $$
 
 where,
 
-- **for $f(A=a)$**: the observed value of $a$ remains unchanged, and estimation is performed for the observed value.
+- **for $f(A=a)$**: the observed value of $a$ remains unchanged. Estimation is performed for the observed value.
   
 - **for $f(A =a^*)$**: $a^* = 4$ if the observed value of $a$ is less than four times the monthly religious service attendance. If the observed value of $a$ is four or greater, no intervention is performed, and $a^*$ equals $a$. This function enforces a minimum threshold for religious attendance at four but allows those who meet or exceed this threshold to remain unchanged.
   
@@ -827,14 +825,14 @@ Again, a central feature of TMLE is its double-robustness property. This means t
 ::: {#tbl-identification}
 
 ```{=latex}
-\lmtptable
+\lmtp table
 ```
 Identification strategy
 :::
 
 
 <!-- ```{tikz} -->
-<!-- #| label: fig-outcomewide-dag -->
+<!-- #| label: fig-outcome wide-dag -->
 <!-- #| fig-cap: "Causal graph: three-wave panel design with selection bias. By controlling for confounding at baseline we block back-door paths that might lead to an association between the treatment and the outcome. Adding previous measurements of the exposure and outcome at baseline further reduces confounding. Nevertheless, because we cannot ensure all confounding paths have been blocked, we perform sensitivity analysis. These allow us to ask how strong the unmeasured confounder needs to be in its association with the treatment and the outcome to explain away the observed association." -->
 <!-- #| out-width: 80% -->
 <!-- #| echo: false -->
@@ -1703,6 +1701,7 @@ Fourth, we find corroborating evidence for the effects of religious service atte
 
 # sample mean at end of study (won't be population mean)
 mean_donations <- margot::here_read("mean_donations")
+mean_volunteer <- margot::here_read("mean_volunteer")
 
 # import models
 # population mean
@@ -1718,6 +1717,7 @@ t2_charity_donate_z_gain <- here_read("t2_charity_donate_z_gain")
 # note these correctly account for sample weights
 mean_donations_gain <-mean_donations  + ( t2_charity_donate_z_gain$theta * sd_donations )
 mean_donations_null <-mean_donations  + ( t2_charity_donate_z_null$theta * sd_donations )
+
 mean_donations_zero<- mean_donations  + ( t2_charity_donate_z_zero$theta * sd_donations )
 
 
@@ -1805,7 +1805,7 @@ prop_loss_of_gain <- round( abs(net_loss/net_gain), 2)
 
 We may use our results to compute the approximate economic value of religious service attendance by comparing the sums of expected donations across the New Zealand's adult population under the all-gain, all-loss, and status quo.
 
-We find that an increase in religious service attendance is expected to result an individual average donation rate of `r mean_donations_gain`,  Conversely, a decrease in religious service attendance is expected to an average charitable donation rate of `r mean_donations_zero`. The status quo is expected to yeild an average donation rate of `r mean_donations_null`.  The number of adult residents living in New Zealand in 2021 was `r nz_adult_population`,[^pop]  Multiplying this number by the estimated rates suggests the net gain to charity of country-wide religious service attendance compared with the status quo is `r net_gain`. By contrast the net cost of a country-wide loss of regular religious service attendance on charitable donations is: `r net_loss`.  
+We find that an increase in religious service attendance is expected to result in an individual average donation rate of `r mean_donations_gain`,  Conversely, a decrease in religious service attendance is expected to an average charitable donation rate of `r mean_donations_zero`. The status quo is expected to yield an average donation rate of `r mean_donations_null`.  The number of adult residents living in New Zealand in 2021 was `r nz_adult_population`,[^pop]  Multiplying this number by the estimated rates suggests the net gain to charity of country-wide religious service attendance compared with the status quo is `r net_gain`. By contrast the net cost of a country-wide loss of regular religious service attendance on charitable donations is: `r net_loss`.  
 
 
 [^pop]: [https://www.stats.govt.nz/information-releases/national-population-estimates-at-30-june-2021](https://www.stats.govt.nz/information-releases/national-population-estimates-at-30-june-2021)
@@ -1841,7 +1841,7 @@ contrast_volunteer <-
 
 
 b_church_on_hours_charity<-margot::here_read("b_church_on_hours_charity")
-b_church_on_charity_donate<-margot::here_read("fit_church_on_charity_donate")
+b_church_on_charity_donate<-margot::here_read("b_church_on_charity_donate")
 
 #b_church_on_hours_charity
 
@@ -1870,11 +1870,11 @@ percent_greater_regression_donate
 percent_greater_regression_volunteer
 ```
 
-How do these results compare with a cross-sectional regression? 
+How do these results compare to cross-sectional regression? 
 
 We performed a cross-sectional analysis in which we estimated the relationship between religious service attendance and charitable donations. We included all regression covariates from the causal models (including sample weights), except the baseline outcome. The coefficient for religious service attendance in this model, which represents the change in expectation from a one-unit change in the predictor, is `r b_church_on_charity_donate`. To obtain the monthly rate we multiplied this estimate by 4.2 to obtain a prediction of `r regression_regular_church_charity`. This amount is `r percent_greater_regression_donate` than we infer from the ALL-GAIN vs ALL LOSS causal model.
 
-Recalled we did not find reliable evidence for self-reported volunteering from gains in religious service attendance. However, the coefficients we obtain for volunteering in a cross-sectional model was estimated to be reliable at `r b_church_on_hours_charity`.  To obtain the monthly rate we multiplied this estimate by 4.2 and by 60 to obtain a prediction of `r regression_regular_church_volunteer_minutes` minutes. This amount is `r percent_greater_regression_volunteer` than we infer from the ALL-GAIN vs ALL LOSS causal model.
+Recalled we did not find reliable evidence for self-reported volunteering from gains in religious service attendance. However, the coefficients we obtained for volunteering in a cross-sectional model were estimated to be reliable at `r b_church_on_hours_charity`.  To obtain the monthly rate we multiplied this estimate by 4.2 and by 60 to obtain a prediction of `r regression_regular_church_volunteer_minutes` minutes. This amount is `r percent_greater_regression_volunteer` than we infer from the ALL-GAIN vs ALL LOSS causal model.
 
 The results underscore the importance of remembering that cross-sectional regressions are unreliable for estimating causal effects. 
 
@@ -1955,7 +1955,7 @@ We assessed disability with a one item indicator adapted from @verbrugge1997, th
 
 #### Education Attainment (waves: 1, 4-15)
 
-We asked participants, "What is your highest level of qualification?". We coded participants highest finished degree according to the New Zealand Qualifications Authority. Ordinal-Rank 0-10 NZREG codes (with overseas school quals coded as Level 3, and all other ancillary categories coded as missing) See:https://www.nzqa.govt.nz/assets/Studying-in-NZ/New-Zealand-Qualification-Framework/requirements-nzqf.pdf
+We asked participants, "What is your highest level of qualification?". We coded participants' highest finished degree according to the New Zealand Qualifications Authority. Ordinal-Rank 0-10 NZREG codes (with overseas school quals coded as Level 3, and all other ancillary categories coded as missing) See:https://www.nzqa.govt.nz/assets/Studying-in-NZ/New-Zealand-Qualification-Framework/requirements-nzqf.pdf
 
 #### Employment (waves: 1-3, 4-11)
 
@@ -2621,6 +2621,7 @@ table_outcomes |>  kbl(format = "markdown")
 
 
 ## References {.appendix}
+
 
 
 
