--- a/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.tex
+++ b/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.tex
@@ -4,7 +4,7 @@
 \PassOptionsToPackage{dvipsnames,svgnames,x11names}{xcolor}
 %
 \documentclass[
-  singlecolumn]{article}
+  single column]{article}
 
 \usepackage{amsmath,amssymb}
 \usepackage{iftex}
@@ -195,28 +195,30 @@ Sibley \and Geoffrey Troughton}
 \begin{document}
 \maketitle
 \begin{abstract}
-Whether religion causes prosociality is poorly defined. To make it
-precise, we must state a causal contrast of interest, specify our
-measures of ``prosociality,'' and clarify the target population for whom
-results are meant to generalise. Here, we investigate three hypothetical
-interventions or ``treatment policies'' for religious service attendance
-across New Zealand. Each treatment policy addresses a causal question
-motivated by distinct theoretical or practical interests. Study 1
-investigates the effects of these treatment policies on self-reported
-social behaviours; Study 2 investigates treatment-policy effects on
-perceived social connection; Study 3 investigates the effects of
-voluntary help received from others; Study 4 investigates the effects of
-money received from others. Notably, our measures in Studies 3 and 4
-avoid self-presentation bias. Overall, we find evidence that religion
-supports pro-social behaviours across all four measurement domains of
-prosociality. However, the magnitude of benefit varies depending on the
-treatment policy of interest -- especially whether religious service is
-gained or lost. Notably, magnitudes of benefit are lower than suggested
-by the approaches human scientists typically employ. Nevertheless, the
-gain and loss of regular religious service have considerable social
-consequences, which we compute. Collectively, these findings illustrate
-a pathway for quantitative causal investigations into the social
-consequences of religious behaviours.
+Whether religion causes prosociality is a poorly defined question. To
+make it precise, we must state a causal contrast of interest, specify
+our measures of ``prosociality,'' and clarify the target population for
+whom results are meant to generalise. Here, we investigate three
+hypothetical interventions on religious service attendance and examine
+their effects on four prosociality measurement domains for the
+population of New Zealand. Each treatment policy addresses a causal
+question motivated by a distinct theoretical or practical interest.
+Study 1 investigates the effects of the three interventions on
+self-reported social behaviours; Study 2 investigates effects on
+perceived social connection; Study 3 investigates effects on reported
+hours of help received from others; Study 4 investigates the effects of
+reported money received from others. Overall, we find evidence that
+religion supports pro-social behaviours across all four measurement
+domains of prosociality. However, the magnitude of benefit varies
+depending on the causal contrast of interest -- and especially whether
+religious service is gained or lost. Magnitudes of benefit are almost
+three-times lower than is suggested by cross-sectional regression
+models. Nevertheless, both the gain and loss of regular religious
+service attendance have considerable economic consequences for
+charitable donations, whose ``cash value'' we compute. Collectively,
+these findings document the social consequences of religious behaviours
+and illustrate a pathway for quantitative causal investigations of the
+effects of cultural practices.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
@@ -244,7 +246,7 @@ theoretical question: ``What would the population-wide difference be on
 a well-defined measure of pro-sociality if everyone attended weekly
 religious service compared with if no one attended?'' This question
 holds theoretical interest. The second treatment policy addresses the
-practical question: ``What would the population-wide difference on a
+practical question: ``What would be the population-wide difference on a
 well-defined measure domain of pro-sociality if everyone attended weekly
 religious service compared to the status quo?'' Here, the contrast does
 not require shifting those people who regularly attend religious
@@ -375,7 +377,7 @@ where,
 \begin{itemize}
 \item
   \textbf{for \(f(A=a)\)}: the observed value of \(a\) remains
-  unchanged, and estimation is performed for the observed value.
+  unchanged. Estimation is performed for the observed value.
 \item
   \textbf{for \(f(A =a^*)\)}: \(a^* = 4\) if the observed value of \(a\)
   is less than four times the monthly religious service attendance. If
@@ -621,7 +623,7 @@ control.
 
 \centering{
 
-\lmtptable
+\lmtp table
 
 }
 
@@ -1763,23 +1765,28 @@ religious institutions are charities that must report their earnings and
 expenses {[}{]}. Whatever one may think of churches, the evidence from
 New Zealand suggests they are efficient charities {[}{]}.
 
+\section{Fifth, Daryl\ldots{}}\label{fifth-daryl}
+
 \subsubsection{Economic value of regular religious
 service}\label{economic-value-of-regular-religious-service}
 
-We may use results to compute the economic or ``cash value'' of
-religious service attendance as follows:
+We may use our results to compute the approximate economic value of
+religious service attendance by comparing the sums of expected donations
+across the New Zealand's adult population under the all-gain, all-loss,
+and status quo.
 
-An increase in religious service attendance results in an enhanced per
-capita donation rate as 1553.3262405, whereas the expected status-quo
-rate is 925.6217757. Conversely, a decrease in religious service
-attendance would lead to a charitable donation rate of 725.145593
-compared with 925.6217757. The New Zealand Adult population in 2021 was
-\ensuremath{3.989\times 10^{6}}.\footnote{\url{https://www.stats.govt.nz/information-releases/national-population-estimates-at-30-june-2021}}
-Summing results indicate that the hypothetical benefit from country-wide
-adoption of regular religious service on charitable donations is:
-\ensuremath{2.5039131\times 10^{9}}, whereas, the hypothetical cost from
-a country-wide loss of regular religious service on charitable donations
-is: \ensuremath{-7.9969949\times 10^{8}}.
+We find that an increase in religious service attendance is expected to
+result in an individual average donation rate of 1553.3262405,
+Conversely, a decrease in religious service attendance is expected to an
+average charitable donation rate of 725.145593. The status quo is
+expected to yield an average donation rate of 925.6217757. The number of
+adult residents living in New Zealand in 2021 was
+\ensuremath{3.989\times 10^{6}},\footnote{\url{https://www.stats.govt.nz/information-releases/national-population-estimates-at-30-june-2021}}
+Multiplying this number by the estimated rates suggests the net gain to
+charity of country-wide religious service attendance compared with the
+status quo is \ensuremath{2.5039131\times 10^{9}}. By contrast the net
+cost of a country-wide loss of regular religious service attendance on
+charitable donations is: \ensuremath{-7.9969949\times 10^{8}}.
 
 Putting these figures in context, the government of New Zealand's annual
 budget in 2021 was \ensuremath{5.7976\times 10^{10}}.\footnote{\url{https://www.treasury.govt.nz/publications/budgets/budget-2021}}.
@@ -1790,29 +1797,32 @@ loss from the country-wide loss of all religious service amounts to
 
 We infer that the declining religious service in New Zealand affects
 charitable giving, however these costs sum to about 0.32 the opportunity
-costs of world in which the population attended religious service
-regularly.
+cost of hypothetical New Zealand in which the population attended
+religious service regularly.
 
 \subsubsection{Note of concern about the use of cross-sectional
 regression models to investigate the social consequences of
 religion}\label{note-of-concern-about-the-use-of-cross-sectional-regression-models-to-investigate-the-social-consequences-of-religion}
 
-How do these results compare with a cross-sectional regression?
+How do these results compare to cross-sectional regression?
 
-For example, the regression coefficient for a one-unit increase in
-religious service attendance is b = 580; (95\% CI 535, 626). A four-unit
-change in this parameter amounts to NZD 2320 expected increase in
-giving, a five fold increase from our the causal contrast ALL GAIN
-vs.~STATUS QUO. Because a regression line is symmetrical, we would
-obtain even greater distortions when projecting to losses of religious
-service attendance.
+We performed a cross-sectional analysis in which we estimated the
+relationship between religious service attendance and charitable
+donations. We included all regression covariates from the causal models
+(including sample weights), except the baseline outcome. The coefficient
+for religious service attendance in this model, which represents the
+change in expectation from a one-unit change in the predictor, is b =
+432; (95\% CI 399, 465). To obtain the monthly rate we multiplied this
+estimate by 4.2 to obtain a prediction of 1813.3319878. This amount is
+2.19 than we infer from the ALL-GAIN vs ALL LOSS causal model.
 
 Recalled we did not find reliable evidence for self-reported
 volunteering from gains in religious service attendance. However, the
-coefficients we obtain for volunteering in a cross-sectional model is b
-= 0.27; (95\% CI 0.24, 0.30), which translates to 64.8 minutes of
-expected gain in volunteering from regular religious service shifting
-from no attendance to weekly.
+coefficients we obtained for volunteering in a cross-sectional model
+were estimated to be reliable at b = 0.25; (95\% CI 0.22, 0.28). To
+obtain the monthly rate we multiplied this estimate by 4.2 and by 60 to
+obtain a prediction of 63.0975753 minutes. This amount is 2.84 than we
+infer from the ALL-GAIN vs ALL LOSS causal model.
 
 The results underscore the importance of remembering that
 cross-sectional regressions are unreliable for estimating causal
@@ -1950,7 +1960,7 @@ months?'' (1 = Yes, 0 = No).
 4-15)}\label{education-attainment-waves-1-4-15}
 
 We asked participants, ``What is your highest level of qualification?''.
-We coded participants highest finished degree according to the New
+We coded participants' highest finished degree according to the New
 Zealand Qualifications Authority. Ordinal-Rank 0-10 NZREG codes (with
 overseas school quals coded as Level 3, and all other ancillary
 categories coded as missing)
